atm-gitops/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
  namespace: atm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend
    spec:
      imagePullSecrets:
        - name: docker-registry-creds
      containers:
        - name: django
          image: raviaarumugam001/django-atm:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
          command:
            - sh
            - -c
            - |
              python manage.py migrate --noinput &&
              python manage.py runserver 0.0.0.0:8003
