atm-gitops/backend/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: django-backend
spec:
  selector:
    app: django-backend
  ports:
    - port: 8003
      targetPort: 8003
  type: ClusterIP
