atm-gitops/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: atm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: onewebres.app.techg.com
    http:
      paths:
      - path: /django
        pathType: Prefix
        backend:
          service:
            name: django-backend
            port:
              number: 8003
